table n:m has been added and all hibernate methods working well